--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
      {% for post in paginator.posts %} 
        <a class="post-link-index" href="{{ post.url | prepend: site.baseurl }}">
           <div itemscope itemtype="http://schema.org/TechArticle" class="card">
-                 <img alt="{{ post.title }}" class="post-image-index" itemprop="thumbnailUrl" src="/thumbs-small/{{ post.image }}" width="300" height="188" />
+                 <img alt="{{ post.title }}" class="post-image-index" itemprop="thumbnailUrl" src="{{ site.baseurl }}/thumbs-small/{{ post.image }}" width="300" height="188" />
 
                 <div class="card-footer">
                     <h2 itemprop="headline" class="post-index-title">{{ post.title }}</h2>
