--- a/_pages/search.html
+++ b/_pages/search.html
@@ -15,7 +15,7 @@ permalink: /search/
 </div>
 
 <!-- Script pointing to search-script.js -->
-<script src="/js/jekyll-search.min.js" type="text/javascript"></script>
+<script src="{{ site.baseurl }}/js/jekyll-search.min.js" type="text/javascript"></script>
 
 <!-- Configuration -->
 <script>
