--- a/_pages/search.html
+++ b/_pages/search.html
@@ -22,7 +22,7 @@ permalink: /search/
 SimpleJekyllSearch({
   searchInput: document.getElementById('search-input'),
   resultsContainer: document.getElementById('results-container'),
-  json: '/search.json'
+  json: '{{ site.baseurl }}/search.json'
 })
 </script>
 
